# stm32mp15x-hal-rs

./: Cargo.toml  README.md  gdbinit  link-ca7.ld  openocd.cfg
.cargo/: config.toml
cortex-a7/: Cargo.toml  README.md
cortex-a7/src/: critical_section_impl.rs  lib.rs  memory.rs  regs.rs
cortex-a7/src/memory/: cache.rs  mmu.rs
examples/: bench.rs  blinky.rs  blinky_async.rs  logging.rs
examples/common/: clocks.rs  console.rs  logger.rs  mod.rs  panic.rs
src/: bitworker.rs  dma.rs  dmamux.rs  gpio.rs  i2c.rs  lib.rs  ltdc.rs  mcu_cm4.rs  mpu_ca7.rs  rng.rs  sai.rs  sdmmc.rs  spi.rs  stgen.rs  time.rs  usart.rs
src/mcu_cm4/: critical_section_impl.rs  startup.s
src/mpu_ca7/: critical_section_impl.rs  gic.rs  irq.rs  iwdg.rs  startup-mpu0.s  startup-mpu1.s  startup-vectors.s
src/rcc/: csi.rs  hse.rs  hsi.rs  mod.rs  pll.rs
tools/: serial_monitor.py
