[package]
name = "stm32mp15x-hal"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "HAL for STM32MP15x SoCs."
repository = "https://github.com/sourcebox/stm32mp15x-hal-rs"
license = "MIT"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["stm32", "stm32mp1", "hal"]
publish = false

[features]
default = ["mpu-ca7"]
mpu-ca7 = ["dep:cortex-a7"]
mcu-cm4 = ["dep:cortex-m"]

[dependencies]
cortex-a7 = { path = "./cortex-a7", optional = true }
cortex-m = { version = "0.7.7", optional = true }
stm32mp1 = { version = "0.16.0", default-features = false, features = [
    "stm32mp157",
] }
critical-section = { version = "1.2.0", features = ["restore-state-u32"] }
embedded-hal = "1.0.0"
embassy-time-driver = { version = "0.2.0", features = ["tick-hz-1_000_000"] }
embassy-time-queue-utils = "0.1.0"
cfg-if = "1.0.1"
int-enum = { version = "1.2.0", default-features = false }

[dev-dependencies]
static_cell = "2.1.1"
log = "0.4.27"
embassy-time = { version = "0.4.0", features = ["tick-hz-1_000_000"] }

[profile.release]
codegen-units = 1
debug = true
